# solana-smart-tx

./: .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml  FINDINGS.md  LIFECYCLE_LOG.md  README.md  architecture.html
crates/agent/: Cargo.toml
crates/agent/migrations/: 0001_agent_decisions.sql
crates/agent/src/: lib.rs
crates/failure/: Cargo.toml
crates/failure/src/: lib.rs
crates/leader/: Cargo.toml
crates/leader/examples/: leader_probe.rs
crates/leader/src/: lib.rs
crates/lifecycle/: Cargo.toml
crates/lifecycle/migrations/: 0001_bundle_submissions.sql  0002_jito_inflight_status.sql
crates/lifecycle/src/: lib.rs
crates/orchestrator/: Cargo.toml
crates/orchestrator/src/: app.rs  config.rs  main.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: lib.rs
crates/stream/: Cargo.toml
crates/stream/examples/: slot_probe.rs
crates/stream/src/: lib.rs
crates/submitter/: Cargo.toml
crates/submitter/examples/: connect_probe.rs  simulate_bundle.rs
crates/submitter/src/: lib.rs
crates/tips/: Cargo.toml
crates/tips/examples/: tip_probe.rs
crates/tips/src/: lib.rs
exports/: lifecycle_log.json  lifecycle_log.md
