[package]
name = "agent"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
failure = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
