[package]
name = "lifecycle"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
failure = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
