[package]
name = "submitter"
edition.workspace = true
version.workspace = true
license.workspace = true

[features]
# Gate test-only failure injection (dropped bundles, forced fee-too-low, ...).
fault-injection = []

[dependencies]
jito-sdk-rust = { workspace = true }
solana-sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
